@@ -6,13 +6,17 @@ from sqlalchemy import engine_from_config
 
 from tutorial.security import groupfinder
 
-from .models import DBSession
+from .models import (
+    DBSession,
+    Base,
+    )
 
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
     """
     engine = engine_from_config(settings, 'sqlalchemy.')
     DBSession.configure(bind=engine)
+    Base.metadata.bind = engine
     authn_policy = AuthTktAuthenticationPolicy(
         'sosecret', callback=groupfinder)
     authz_policy = ACLAuthorizationPolicy()
